external-crates/move/crates/move-compiler/tests/custom_rules/constant_naming.exp
warning[Lint W00001]: Constant name should be in all caps, snake case, pascal case or upper camel case.
   ┌─ tests/custom_rules/constant_naming.move:10:11
   │
10 │     const Another_BadName: u64 = 42; // Should trigger a warning
   │           ^^^^^^^^^^^^^^^ 'Another_BadName' should be named using UPPER_CASE_WITH_UNDERSCORES or PascalCase/UpperCamelCase
   │
   = This warning can be suppressed with '#[allow(lint(constant_naming))]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E02010]: invalid name
   ┌─ tests/custom_rules/constant_naming.move:13:11
   │
13 │     const minimumValue: u64 = 10; 
   │           ^^^^^^^^^^^^ Invalid constant name 'minimumValue'. Constant names must start with 'A'..'Z'

warning[Lint W00001]: Constant name should be in all caps, snake case, pascal case or upper camel case.
   ┌─ tests/custom_rules/constant_naming.move:13:11
   │
13 │     const minimumValue: u64 = 10; 
   │           ^^^^^^^^^^^^ 'minimumValue' should be named using UPPER_CASE_WITH_UNDERSCORES or PascalCase/UpperCamelCase
   │
   = This warning can be suppressed with '#[allow(lint(constant_naming))]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E02010]: invalid name
   ┌─ tests/custom_rules/constant_naming.move:14:11
   │
14 │     const some_important_number: u64 = 55;
   │           ^^^^^^^^^^^^^^^^^^^^^ Invalid constant name 'some_important_number'. Constant names must start with 'A'..'Z'

warning[Lint W00001]: Constant name should be in all caps, snake case, pascal case or upper camel case.
   ┌─ tests/custom_rules/constant_naming.move:14:11
   │
14 │     const some_important_number: u64 = 55;
   │           ^^^^^^^^^^^^^^^^^^^^^ 'some_important_number' should be named using UPPER_CASE_WITH_UNDERSCORES or PascalCase/UpperCamelCase
   │
   = This warning can be suppressed with '#[allow(lint(constant_naming))]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[Lint W00001]: Constant name should be in all caps, snake case, pascal case or upper camel case.
   ┌─ tests/custom_rules/constant_naming.move:17:11
   │
17 │     const JSON_Max_Size: u64 = 1048576;
   │           ^^^^^^^^^^^^^ 'JSON_Max_Size' should be named using UPPER_CASE_WITH_UNDERSCORES or PascalCase/UpperCamelCase
   │
   = This warning can be suppressed with '#[allow(lint(constant_naming))]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E02010]: invalid name
   ┌─ tests/custom_rules/constant_naming.move:19:11
   │
19 │     const numItems: u64 = 30;   
   │           ^^^^^^^^ Invalid constant name 'numItems'. Constant names must start with 'A'..'Z'

warning[Lint W00001]: Constant name should be in all caps, snake case, pascal case or upper camel case.
   ┌─ tests/custom_rules/constant_naming.move:19:11
   │
19 │     const numItems: u64 = 30;   
   │           ^^^^^^^^ 'numItems' should be named using UPPER_CASE_WITH_UNDERSCORES or PascalCase/UpperCamelCase
   │
   = This warning can be suppressed with '#[allow(lint(constant_naming))]' applied to the 'module' or module member ('const', 'fun', or 'struct')

